style: fixing z-index of nimations

--- a/frontend/src/components/animations/feathers/feathers.css
+++ b/frontend/src/components/animations/feathers/feathers.css
@@ -6,7 +6,7 @@
   height: 100dvh;
   overflow: hidden;
   pointer-events: none;
-  z-index: -1;
+  z-index: 0;
 }
 
 .feather-item {
